--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-
+<app-header></app-header>
+<div class="mb-4">
+  <router-outlet></router-outlet>
+</div>
+<app-footer class="d-block mt-auto bg-dark text-light"></app-footer>
