--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -4,10 +4,15 @@
       <h4>Iniciar sesión</h4>
       <hr />
       <p class="text-secondary">Bienvenido, ingresa a tú cuenta.</p>
-      <form class="mb-5" (submit)="login()" [formGroup]="formLogin">
+      <form class="mb-5" (submit)="login()" [formGroup]="loginForm">
         <div class="mb-3">
           <label class="form-label">Correo electronico</label>
-          <input formControlName="email" type="email" class="form-control" />
+          <input
+            #loginEmailInput
+            formControlName="email"
+            type="email"
+            class="form-control"
+          />
         </div>
         <div class="mb-3">
           <label class="form-label">Contraseña</label>
@@ -29,7 +34,7 @@
           >
         </div>
         <button
-          [disabled]="formLogin.invalid"
+          [disabled]="loginForm.invalid"
           type="submit"
           class="btn btn-primary"
         >
@@ -43,24 +48,29 @@
     <div class="col-sm-12 col-lg-6">
       <h4>Registrarme</h4>
       <hr />
-      <p class="text-secondary">
-        Crea tu cuenta con tu usuario, correo electrónico y contraseña.
-      </p>
-      <form [formGroup]="formRegister" (submit)="register()">
+      <p class="text-secondary">Crea tu cuenta.</p>
+      <form [formGroup]="registerForm" (submit)="register()">
         <div class="mb-3">
-          <label class="form-label">Usuario</label>
-          <input formControlName="username" type="text" class="form-control" />
+          <label class="form-label">Nombre(s)</label>
+          <input formControlName="name" type="text" class="form-control" />
+          <span *ngIf="isFieldInvalid('name', registerForm)" class="text-danger"
+            >Este campo es obligatorio.</span
+          >
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Apellidos</label>
+          <input formControlName="lastname" type="text" class="form-control" />
           <span
-            *ngIf="isFieldInvalid('username', formRegister)"
+            *ngIf="isFieldInvalid('lastname', registerForm)"
             class="text-danger"
-            >Debe tener al menos 5 caracteres.</span
+            >Este campo es obligatorio.</span
           >
         </div>
         <div class="mb-3">
           <label class="form-label">Correo electronico</label>
           <input formControlName="email" type="email" class="form-control" />
           <span
-            *ngIf="isFieldInvalid('email', formRegister)"
+            *ngIf="isFieldInvalid('email', registerForm)"
             class="text-danger"
             >Ingrese un correo electronico valido.</span
           >
@@ -73,7 +83,7 @@
             class="form-control"
           />
           <span
-            *ngIf="isFieldInvalid('password', formRegister)"
+            *ngIf="isFieldInvalid('password', registerForm)"
             class="text-danger"
             >Debe tener al menos 6 caracteres</span
           >
@@ -85,13 +95,13 @@
             type="password"
             class="form-control"
           />
-          <span *ngIf="formRegister.errors" class="text-danger"
+          <span *ngIf="registerForm.errors" class="text-danger"
             >Las contraseñas no coinciden</span
           >
         </div>
 
         <button
-          [disabled]="formRegister.invalid"
+          [disabled]="registerForm.invalid"
           type="submit"
           class="btn btn-primary"
         >
