--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <hr />
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto align-items-center">
         <li *ngIf="user" class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -35,7 +35,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            {{ user.email }}
+            {{ user.name | titlecase }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item">Perfil</a></li>
